k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: optimize-demo
  labels:
    name: optimize-demo
