k8s/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: optimize-client-nodeport
  namespace: optimize-demo
spec:
  type: NodePort
  selector:
    app: optimize-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
---
apiVersion: v1
kind: Service
metadata:
  name: optimize-server-nodeport
  namespace: optimize-demo
spec:
  type: NodePort
  selector:
    app: optimize-server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30500
